# PySysInfo

./: .buildinfo  .gitignore  LICENSE  README.md  cpuinfo.txt  genindex.html  hardware_managers.html  index.html  main.py  models.html  objects.inv  pyproject.toml  querying_info.html  quickstart.html  search.html  searchindex.js  serialization.html  supported.html  test.py  theory.html
.doctrees/: environment.pickle  hardware_managers.doctree  index.doctree  models.doctree  querying_info.doctree  quickstart.doctree  serialization.doctree  supported.doctree  theory.doctree
.github/workflows/: documentation.yml
_sources/: hardware_managers.rst.txt  querying_info.rst.txt  serialization.rst.txt  supported.rst.txt  theory.rst.txt
_static/: documentation_options.js
docs/source/: classes.rst  conf.py  hardware_managers.rst  index.rst  models.rst  querying_info.rst  quickstart.rst  supported.rst  theory.rst
src/pysysinfo/: __init__.py
src/pysysinfo/dumps/linux/: common.py  cpu.py  gpu.py  graphics.py  linux_dump.py  memory.py  storage.py
src/pysysinfo/dumps/mac/: common.py  cpu.py  graphics.py  ioreg.py  mac_dump.py  memory.py  storage.py
src/pysysinfo/dumps/windows/: common.py  cpu.py  graphics.py  memory.py  network.py  storage.py  windows_dump.py
src/pysysinfo/interops/win/: gpu_helper.cpp
src/pysysinfo/interops/win/api/: constants.py  signatures.py  structs.py
src/pysysinfo/models/: component_model.py  cpu_models.py  disk_models.py  gpu_models.py  info_models.py  memory_models.py  network_models.py  response_models.py  status_models.py  storage_models.py
src/pysysinfo/util/: nvidia.py
tests/dumps/linux/: test_cpu.py  test_gpu.py  test_graphics.py  test_memory.py  test_storage.py
tests/dumps/windows/: test_network.py
