[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PySysInfo"
version = "0.0.1"
description = "A cross-platform system information gatherer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Mahasvan", email = "mahasvan@gmail.com"}
]
dependencies = [
    "pydantic",
    "pyobjc; sys_platform == 'darwin'",
#    "wmi; python_version >= '3.9' and sys_platform == 'win32'"
]