[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PySysInfo"
version = "0.0.1"
description = "A cross-platform system information gatherer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Mahasvan", email = "mahasvan@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic",
    "pyobjc; sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
where = ["src"]