[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pysysinfo.__version__" }

[project]
name = "PySysInfo"
dynamic = ["version"]
description = "A cross-platform system information gatherer"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

authors = [
    { name = "Mahasvan", email = "mahasvan@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "pyobjc; sys_platform == 'darwin'",
]

[tool.setuptools.packages.find]
where = ["src"]


[project.urls]
Homepage = "https://github.com/Mahasvan/PySysInfo"
Issues = "https://github.com/Mahasvan/PySysInfo/issues"
